# peerlogic-voip

./: .gitignore  DEMO_DEPLOYMENT.md  DEPLOYMENT.md  Procfile  RAILWAY_CONFIGURATION.md  RAILWAY_DEPLOYMENT_STEPS.md  RAILWAY_NEXT_STEPS.md  RAILWAY_POST_DEPLOYMENT.md  RAILWAY_SETUP.md  RAILWAY_URL.txt  README.md  env.example  pyproject.toml  requirements.txt
config/: settings.py  urls.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: Dashboard.vue  Devices.vue  Users.vue
src/voip/adapters/: __init__.py  base.py  registry.py
src/voip/adapters/mock/: __init__.py  client.py
src/voip/adapters/netsapiens/: __init__.py  client.py
src/voip/api/: __init__.py  setup_views.py  urls.py  views.py
src/voip/models/: __init__.py  schemas.py
src/voip/services/: __init__.py  voip_service.py
src/voip_admin/: admin.py  apps.py  id_mapping.py  models.py  permissions.py
src/voip_admin/management/commands/: initial_setup.py  setup_mock_connection.py  setup_test_connection.py
src/voip_admin/migrations/: 0001_initial.py  0002_idmapping.py
tests/: test_integration.py
